<resources>
    <string name="app_name">Learn n Fun</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sign_out">SignOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_you">About You</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="contact_no">Contact No.</string>
    <string name="code">Code</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="change">Change</string>

</resources>