<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/menu_quiz" />
    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="secondary"
        android:orderInCategory="2">
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_baseline_cloud_download_24"
            android:title="@string/menu_downloads" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_person_remove_24"
            android:title="@string/menu_sign_out" />
    </group>

</menu>