<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/menu_profile"
        android:src="@drawable/ic_baseline_account_circle_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/profile_pic"
        android:contentDescription="@string/menu_profile"
        android:src="@android:drawable/ic_menu_edit"
        app:backgroundTint="@color/teal_700"
        app:useCompatPadding="true" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/white"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"
        android:text="@string/app_name" />

    <View
        android:id="@+id/profile_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/profile_email"
        android:background="@color/teal_700" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/profile_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/contact_no"
                android:inputType="phone" />

            <EditText
                android:id="@+id/profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/choose_your_gender"
                android:inputType="text" />

            <EditText
                android:id="@+id/profile_alt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/profile_about"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:hint="@string/about_you"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>